--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.218.0",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0"
